# routes/api.php
@@ -24,7 +24,7 @@ Route::group(['prefix' => 'v1', 'middleware' => ['cors','google.check']], functi
     
     Route::resource('positions','PositionController', ['only' => ['store','index','destroy','update']]);
     
-    Route::resource('technologies','TechnologyController', ['only' => ['store','show','destroy','update']]);
+    Route::resource('technologies','TechnologyController', ['only' => ['store','index','destroy','update']]);
     
 });
 
